# consolewidget

./: CMakeLists.txt  ConsoleIODevice.cpp  ConsoleIODevice.h  ConsoleWidget.cpp  ConsoleWidget.h  LICENSE  README.md  consolewidget.pc.in
